Add missing labels for tables

--- a/index.html
+++ b/index.html
@@ -2195,8 +2195,9 @@ FPR (p_a-p_b) TPR = 0\]</span></td>
 </section>
 <section id="comparing-outcomes" class="level3 unnumbered">
 <h3 class="unnumbered">Comparing Outcomes</h3>
+<div id="tbl:GFOutSumm">
 <table>
-<caption>Group fairness metrics comparing outcomes.</caption>
+<caption>Table 3.5: Group fairness metrics comparing outcomes.</caption>
 <thead>
 <tr class="header">
 <th style="text-align: left;">Category</th>
@@ -2255,6 +2256,7 @@ FPR (p_a-p_b) TPR = 0\]</span></td>
 </tr>
 </tbody>
 </table>
+</div>
 <div class="tablenotes">
 <p><sup>a</sup>Also called, demographic parity and parity impact.</p>
 <p><sup>b</sup>Also called, discrimination score and statistical parity difference.</p>
@@ -2284,8 +2286,9 @@ FPR (p_a-p_b) TPR = 0\]</span></td>
 <li><p>Criteria comparing errors assume that the data is fair.</p></li>
 <li><p>Unlike criteria comparing outcomes, criteria comparing errors do not preclude the theoretically perfect solution, <span class="math inline">\(\hat{Y}=Y\)</span>.</p></li>
 </ul>
+<div id="tbl:GFErrSumm">
 <table>
-<caption>Group fairness metrics comparing errors.</caption>
+<caption>Table 3.6: Group fairness metrics comparing errors.</caption>
 <thead>
 <tr class="header">
 <th style="text-align: left;">Category</th>
@@ -2342,6 +2345,7 @@ FPR (p_a-p_b) TPR = 0\]</span></td>
 </tr>
 </tbody>
 </table>
+</div>
 <section id="separation-hatybot-zy" class="level4 unnumbered">
 <h4 class="unnumbered">Separation (<span class="math inline">\(\hat{Y}\bot Z|Y\)</span>)</h4>
 <ul>
